style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

::-webkit-scrollbar {
    width: 16px;
}

::-webkit-scrollbar-thumb {
    background-color: #A9907E;
    border-radius: 8px;
}

::-webkit-scrollbar-track {
    background-color: #E3CCAE;
    border-radius: 8px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: #675D50; 
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Open Sans', Arial, sans-serif;
}

nav {
    min-width: 300px;
    height: 100vh;
    display: flex;
    flex-direction: column;
    -ms-flex-direction: column;
    border-right: 1px solid #000000;
    position: fixed;
    top: 0px;
    left: 0px;
    background-color: #ABC4AA;
}

nav div {
    display: flex;
    flex-direction: column;
    -ms-flex-direction: column;
    overflow-y: auto;
}

nav header {
    margin: 15px auto;
    font-size: 28px;
    text-align: center;
}

nav div a {
    padding-left: 30px;
    padding-top: 14px;
    padding-bottom: 14px;
    font-size: 16px;
    text-decoration: none;
    color: #000000;
    border-top: 1px solid #000000;
}

nav div a:hover {
    background-color: #BBD6B8;
}

main {
    margin: 0px 20px 30px 300px;
}

main section {
    padding-left: 40px;
    scroll-margin-top: 20px;
}

main section header {
    margin: 24px 0px;
    font-size: 28px;
}

main section p {
    margin: 10px 0px 10px 20px;
    line-height: 25px;
    color: #4d4e53;
}

main section ul {
    margin-left: 80px;
    line-height: 25px;
    color: #4d4e53;
}

main section ul li {
    margin-top: 18px;
}

main section code {
    width: 90%;
    height: auto;
    margin-left: 50px;
    padding: 16px;
    display: inline-block;
    background-color: #f7f7f7;
}

@media only screen and (max-width: 850px) {
    nav {
        width: 100%;
        height: auto;
        flex-direction: column;
        -ms-flex-direction: column;
        text-align: center;
        position: static;
        border-left: 1px solid #000000;
    }

    nav div {
        overflow-y: hidden;
    }

    main {
        margin: 10px 0px 20px 0px;
    }

    main section {
        padding: 0px 30px;
    }

    main section code {
        width: 90%;
        margin-left: 50px;
        padding: 16px;
    }
}

@media only screen and (max-width: 450px) {
    nav {
        border-left: 1px solid #000000;
    }
    main section {
        padding: 0px 16px;
    }

    main section code {
        width: 90%;
        margin-left: 16px;
        padding: 16px;
    }
}

